# pylan_chat

./: .gitignore  README.md  commands.py  discovery.py  file_tsf.py  gui.py  main.py  msg_server.py  pyproject.toml  pytest.ini  requirements.txt  requirements_gui.txt  run_gui.bat  run_gui.py  run_gui.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  security.yml
docs/: AUTO_RELEASES.md  BUILD_README.md  CI_CD_SETUP.md
scripts/: build_all.py  build_linux.py  build_macos.py  build_unix.sh  build_windows.bat  build_windows.py  create_release.bat  create_release.py  create_release.sh  requirements_build.txt
tests/: test_gui.py  test_main.py
uploads/: .gitkeep
